@@ -1,5 +1,10 @@
 2009-09-08  Brad Taylor  <brad@getcoded.net>
 
+	* strongwind/events.py: Use the more correct way of discovering a
+	variable's type, fix a small bug, and use a bit better in syntax.
+
+2009-09-08  Brad Taylor  <brad@getcoded.net>
+
 	* strongwind/events.py: Add event listening support.
 
 2009-06-17  Brad Taylor  <brad@getcoded.net>
